# Morph

./: .gitignore  build.sh  conanfile.py  meson.build
python/app/: morph.py
python/base/: store.py
python/platform/: __init__.py  node.py  nodestorage.py
python/ui/: __init__.py  uimanager.py
python/ui/grapheditor/: __init__.py  grapheditor.py  nodeui.py
src/: meson.build
src/base/immutable/: map.h
src/base/immutable/detail/: allocation.h  array.h  bits.h  iterator.h  node.h  operations.h  refcounted.h
src/platform/: attribute.h  computeengine.cpp  computeengine.h  enabledispatch.h  knob.h  meson.build  node.h  nodefactory.h  nodefactoryregistry.cpp  nodefactoryregistry.h  nodestorage.cpp  nodestorage.h  nodestorageactions.h  taskqueue.cpp  taskqueue.h
src/python/: meson.build
src/python/base/: bindimmutable.cpp
src/python/platform/: bindnode.inl  bindnodefactoryregistry.inl  module.cpp  pythonnode.cpp  pythonnode.h
src/test/: immutabletest.cpp  meson.build
